force-app/main/default/objects/Account/fields/DevSecOps_Level__c.field-meta.xml
<CustomField>
    <fullName>DevSecOps_Level__c</fullName>
    <label>DevSecOps Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>