force-app/main/default/objects/Account/fields/Easy__c.field-meta.xml
<CustomField>
    <fullName>Easy__c</fullName>
    <label>Easy</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>