force-app/main/default/objects/Account/fields/New_Field_1__c.field-meta.xml
<CustomField>
    <fullName>New_Field_1__c</fullName>
    <label>New Field 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>